tests/rosetta/out/Pascal/ascii-art-diagram-converter.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:10Z
program AsciiArtDiagramConverter;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function main(): integer;
begin
  writeln('Diagram after trimming whitespace and removal of blank lines:
');
  writeln('+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+');
  writeln('|                      ID                       |');
  writeln('+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+');
  writeln('|QR|   Opcode  |AA|TC|RD|RA|   Z    |   RCODE   |');
  writeln('+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+');
  writeln('|                    QDCOUNT                    |');
  writeln('+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+');
  writeln('|                    ANCOUNT                    |');
  writeln('+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+');
  writeln('|                    NSCOUNT                    |');
  writeln('+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+');
  writeln('|                    ARCOUNT                    |');
  writeln('+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+');
  writeln('
Decoded:
');
  writeln('Name     Bits  Start  End');
  writeln('=======  ====  =====  ===');
  writeln('ID        16      0    15');
  writeln('QR         1     16    16');
  writeln('Opcode     4     17    20');
  writeln('AA         1     21    21');
  writeln('TC         1     22    22');
  writeln('RD         1     23    23');
  writeln('RA         1     24    24');
  writeln('Z          3     25    27');
  writeln('RCODE      4     28    31');
  writeln('QDCOUNT   16     32    47');
  writeln('ANCOUNT   16     48    63');
  writeln('NSCOUNT   16     64    79');
  writeln('ARCOUNT   16     80    95');
  writeln('
Test string in hex:');
  writeln('78477bbf5496e12e1bf169a4');
  writeln('
Test string in binary:');
  writeln('011110000100011101111011101111110101010010010110111000010010111000011011111100010110100110100100');
  writeln('
Unpacked:
');
  writeln('Name     Size  Bit pattern');
  writeln('=======  ====  ================');
  writeln('ID        16   0111100001000111');
  writeln('QR         1   0');
  writeln('Opcode     4   1111');
  writeln('AA         1   0');
  writeln('TC         1   1');
  writeln('RD         1   1');
  writeln('RA         1   1');
  writeln('Z          3   011');
  writeln('RCODE      4   1111');
  writeln('QDCOUNT   16   0101010010010110');
  writeln('ANCOUNT   16   1110000100101110');
  writeln('NSCOUNT   16   0001101111110001');
  writeln('ARCOUNT   16   0110100110100100');
end;

begin
  main();
end.
